！由于mysql表不支持groups，升级mysql驱动程序等。